# Hurtigbrief

./: COPYING  README.md  pyproject.toml
hurtigbrief/abstraction/: __init__.py  address.py  design.py  letter.py  person.py
hurtigbrief/gui/: __init__.py  app.py  config.py  contacts.py  gtk.py  manager.py  notify.py  scheduler.py  task.py  types.py  window.py
hurtigbrief/latex/: config.py  mklatex.py  preamblecache.py  workspace.py
hurtigbrief/latex/templates/: __init__.py  scrletter.py  tokenize.py
hurtigbrief/latex/templates/data/: scrletter-preamble.tex  scrletter.tex
scripts/: musterbrief.py  runhurtigbrief.py
