[project]
name = "hurtigbrief"
version = "0.1.0"
description = "A letter-generating interface to LaTeX typesetting."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {email = "mjz.science@fmvkb.de"},
    {name = "Malte J. Ziebarth"}
]
maintainers = [
    {name = "Malte J. Ziebarth", email = "mjz.science@fmvkb.de"}
]
dependencies = [
    "appdirs",
    "pygobject"
]

[project.scripts]
hurtigbrief = "hurtigbrief.gui.app:run_hurtigbrief"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.tex", "*.svg"]